Add tweets.html with embedded tweet and navigation links

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,6 +14,7 @@
   <h3>My Goals</h3>
   <p>My goal is to become a skilled web developer and build real-world projects.</p>
   <p>I’m currently exploring HTML, CSS, and JavaScript basics.</p>
+  <p><a href="tweets.html">Check out my favorite tweets!</a></p>
 
   <a href="https://www.alxafrica.com/" target="_blank">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
