Refactor HTML files to consistent layout with header, main, footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,18 +6,31 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-   <h2>About Me</h2>
-  <p>Hello! I'm learning HTML and building my very first website.</p>
-  <p>I enjoy coding, designing, and creating digital experiences.</p>
-
-  <h3>My Goals</h3>
-  <p>My goal is to become a skilled web developer and build real-world projects.</p>
-  <p>I’m currently exploring HTML, CSS, and JavaScript basics.</p>
-  <p><a href="tweets.html">Check out my favorite tweets!</a></p>
-
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <h2>About Me</h2>
+      <p>This is my first HTML project.</p>
+      <h3>Skills</h3>
+      <p>I enjoy coding, design, and data analysis.</p>
+      <p>Here’s an image link:</p>
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="150">
+      </a>
+      <p><a href="tweets.html">Check out my favorite tweets!</a></p>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by Zainab - <a href="https://example.com" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
