--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,16 +6,28 @@
     <title>My Tweets</title>
 </head>
 <body>
-   <h1>My Favorite Tweet</h1>
-
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack) 
-    <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-  <!-- Link back to homepage -->
-  <p><a href="index.html">← Back to Homepage</a></p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+      <h1>My Favorite Tweet</h1>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Just setting up my twttr</p>&mdash; jack (@jack)
+        <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <p><a href="index.html">← Back to Homepage</a></p>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by Zainab - <a href="https://example.com" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
