--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,6 +24,38 @@
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="150">
       </a>
       <p><a href="tweets.html">Check out my favorite tweets!</a></p>
+      <h2>Learners Table</h2>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Country</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>25</td>
+        <td>USA</td>
+      </tr>
+      <tr>
+        <td>Emily</td>
+        <td>28</td>
+        <td>Canada</td>
+      </tr>
+      <tr>
+        <td>Michael</td>
+        <td>32</td>
+        <td>Australia</td>
+      </tr>
+      <tr>
+        <td>Sophia</td>
+        <td>21</td>
+        <td>UK</td>
+      </tr>
+    </tbody>
+  </table>
     </article>
     <aside>
       <p>placeholder to add comment thread later</p>
